<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSettingActivity">
    <TextView
        android:id="@+id/setting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/setting_title"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/setting_user_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/setting_user_choice"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_title" />

    <TextView
            android:id="@+id/setting_avg_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/setting_avg_speed"
            android:textAlignment="gravity"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_user_choice" />

    <EditText
              android:id="@+id/setting_avg_speed_edit"
              android:layout_width="250dp"
              android:layout_height="50dp"
              android:layout_marginTop="15dp"
              android:hint="AVG"
              android:paddingStart="24dp"
              android:paddingLeft="24dp"
              android:background="@drawable/edit_text_bg"
              android:textSize="30sp"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/setting_avg_speed"
               />

    <TextView
        android:id="@+id/setting_user_activity_use"
        android:layout_width="250dp"
        android:layout_height="54dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/setting_user_activity_use"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_orange"
        app:layout_constraintTop_toBottomOf="@+id/setting_avg_speed_edit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/setting_user_back"
        android:layout_width="250dp"
        android:layout_height="54dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/setting_user_back"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_orange"
        app:layout_constraintTop_toBottomOf="@+id/setting_user_activity_use"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>